Fixed scroll issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,13 @@ a {
 
 #background {
   background: #000 url('/images/pattern.jpg') repeat right top;
-  background-attachment: scroll;
+  background-position: 0 0;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
